Fix render issue on ios

--- a/src/Card.scss
+++ b/src/Card.scss
@@ -7,8 +7,6 @@ $box-shadow: rgba(0, 0, 0, 11%) 0px 1px 6px 0px;
   margin: 0.5em 1em 0.5em 1em;
   padding: 0.5em 0.5em 0.5em 0.5em;
   box-shadow: #00000069 0px 1px 6px 0px;
-  min-width: 90%;
-  min-height: 90%;
   justify-content: space-evenly;
   overflow: hidden;
 }
